--- a/loja/templates/home/home.html
+++ b/loja/templates/home/home.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6 offset-sm-0">
-                    <form action="{% url 'home' %}" method="GET">
+                    <form action="#" method="GET">
                         <h3>Buscar produtos</h3>
                         <div class="form-row">
                             <div class="col form-group">
@@ -35,7 +35,7 @@
                             <div class="image-circle" style="background-image: url('/media/{{ prod.image }}');"></div>
                             <div class="card-body">
                                 <h5 class="card-title">{{ prod.Produto }}</h5>
-                                <a href="{% url 'home' %}" class="btn btn-primary btn-card">
+                                <a href="#" class="btn btn-primary btn-card">
                                     <i class="fa fa-search"></i> Ver
                                 </a>
                                 <button class="btn btn-warning btn-card">
